@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.13";
+AppVersion = "LimeChat for OSX 0.13.1";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
