@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{278, 67}, {969, 1111}}</string>
+	<string>{{562, 66}, {969, 1111}}</string>
 </dict>
 </plist>
